--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.20.0
+  firebase_auth: ^3.5.0
+  cloud_firestore: ^3.4.0
+  firebase_storage: ^10.3.3
+  flutterfire_ui: ^0.4.3
 
 dev_dependencies:
   flutter_test:
