--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_riverpod: ^1.0.4
   image_picker: ^0.8.5+3
   flutter_slidable: ^2.0.0
+  lottie: ^1.4.1
 
 dev_dependencies:
   flutter_test:
